Fix story-block z-index overlapping component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,9 +93,19 @@ body {
     background: var(--f-color-surface);
     border-radius: var(--f-radius);
     box-shadow: var(--f-shadow-card); 
-    /* background-image: radial-gradient(var(--f-color-surface-strong) 1px, transparent 0); */
+    background-image: radial-gradient(var(--f-color-surface-strong) 1px, transparent 0);
     background-size: 8px 8px;
     background-position: -19px -19px;
+    z-index: 1;
+}
+
+.story-block .f-menu > * {
+    z-index: 1 !important;
+}
+
+[data-rehype-pretty-code-figure],
+[data-rehype-pretty-code-figure] * {
+    z-index: 0;
 }
 
 .styled-content > h1,
